--- a/style.css
+++ b/style.css
@@ -8,9 +8,20 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: yellow;
+    background-color: rgb(248, 149, 0);
 }
 
+
 #startScan {
-    margin-top: 200px; /* Adjust this value to increase/decrease space between button and top */
+    padding: 10px 20px;
+    background-color: #c50303;
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#startScan:hover {
+    background-color: #3cff00;
 }
